# 3D_stenosed_artery-

./: CMakeLists.txt  README.md  artery.cpp  input2d  input3d  main.cpp
